--- a/menu.html
+++ b/menu.html
@@ -1,14 +1,21 @@
 <div class="menu">
   <div class="menu-table flex-row-space-between">
+   <div class="flex-row-center">
+
+    <img class=customimagelogo src="img/UVAPic.jpeg">
     <div class="logo flex-row-center">
       <a href="index.html">GPCE-COVID</a>
+
     </div>
+
+  </div>
+
     <a class="menu-button" tabindex="0" href="javascript:void(0)">
       <img src="img/menu.png">
     </a>
     <div class="menu-items flex-row-center flex-item">
-      <a class="menu-index" href="index.html">Overview</a>
-      <a class="menu-embedding" href="embedding.html">Interactive Graph</a>
+      <a class="menu-index" style="margin-right: 1275px"  href="index.html">Overview</a>
+      <a class="menu-embedding" href=""></a>
       
       </div>
       
